--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,1 +1,75 @@
+@import "variables";
+/* /src/scss/_variables.scss */
+@import "../../node_modules/bootstrap/scss/bootstrap";
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
+body {
+    background-color: $white;
+    height: 100%;
+    font-family: "Noto Sans", sans-serif !important;
+    margin: 0px !important;
+}
+
+.card {
+    background-color: $lighter-theme;
+    border: none;
+    margin-top: 50%;
+    width: 100%;
+
+    &-title {
+        text-align: center;
+        margin: 60px 0px;
+        color: $primary !important;
+        font-family: "Josefin Sans", sans-serif !important;
+        font-size: 60px;
+    }
+
+    &-text {
+        text-align: center;
+        margin-top: 40px !important;
+        margin-bottom: 30px !important;
+    }
+
+    &-text a {
+        font-weight: 800;
+        text-decoration: none;
+    }
+}
+
+.d-grid {
+    margin-top: 15px !important;
+}
+
+.d-grid .btn {
+    padding: 10px 20px;
+    font-weight: 600;
+}
+
+footer div.footer {
+    position: absolute !important;
+    bottom: 0;
+    width: 100%;
+}
+
+footer div.footer p {
+    text-align: center;
+}
+/*transitions*/
+.card, .card-body, .card-title, .col-lg-4 {
+    transition: 0.2s ease !important;
+}
+
+@media (max-width: 1135px) {
+    .card {
+        &-title {
+            font-size: 50px;
+        }
+    }
+}
+
+@media (max-width: 992px) {
+    .card {
+        margin-top: 10px;
+    }   
+}
