WAVE and Validator fixes

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -4,4 +4,5 @@ $lighter-theme:  #E0D5ED !default;
 $input-txt:  #6F6F6F !default;
 $white:  #ffffff !default;
 $black:  #000000 !default;
-$policy: #848484 !default;
+$policy: #575757 !default;
+$comment: rgb(22, 22, 22) !default;
