Changes based of CA feedback

--- a/src/scss/feed.scss
+++ b/src/scss/feed.scss
@@ -52,9 +52,9 @@
                 &.btn-block {
                     text-align: center;
                     margin-bottom: 10px;
-                    background-color: $white !important;
-                    border: 2px solid $primary !important;
-                    color: $primary !important;
+                    background-color: $white;
+                    border: 2px solid $primary;
+                    color: $primary;
                     font-weight: 600;
                     width: 100%;
                 }
