--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,8 +1,11 @@
 // scss-docs-start color-variables
-$primary:    #7000FF !default;
+$primary:  #7000FF !default;
 $lighter-theme:  #E0D5ED !default;
 $input-txt:  #6F6F6F !default;
 $white:  #ffffff !default;
 $black:  #000000 !default;
 $policy: #575757 !default;
 $comment: rgb(22, 22, 22) !default;
+$navbar-light-color: #292929 !default;
+$navbar-light-hover-color: #7000FF !default;
+$navbar-light-active-color: #7000FF !default;  
