--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -7,8 +7,7 @@
 body {
     background-color: $white;
     height: 100%;
-    font-family: "Noto Sans", sans-serif !important;
-    margin: 0px !important;
+    margin: 0px;
 }
 
 .card {
@@ -20,15 +19,15 @@ body {
     &-title {
         text-align: center;
         margin: 60px 0px;
-        color: $primary !important;
-        font-family: "Josefin Sans", sans-serif !important;
+        color: $primary;
+        font-family: "Josefin Sans", sans-serif;
         font-size: 60px;
     }
 
     &-text {
         text-align: center;
-        margin-top: 40px !important;
-        margin-bottom: 30px !important;
+        margin-top: 40px;
+        margin-bottom: 30px;
     }
 
     &-text a {
@@ -38,7 +37,7 @@ body {
 }
 
 .d-grid {
-    margin-top: 15px !important;
+    margin-top: 15px;
 }
 
 .d-grid .btn {
@@ -47,7 +46,7 @@ body {
 }
 
 footer div.footer {
-    position: absolute !important;
+    position: absolute;
     bottom: 0;
     width: 100%;
 }
@@ -57,10 +56,10 @@ footer div.footer p {
 }
 /*transitions*/
 .card, .card-body, .card-title, .col-lg-4 {
-    transition: 0.2s ease !important;
+    transition: 0.2s ease;
 }
 
-@media (max-width: 1135px) {
+@include media-breakpoint-down(xl) {
     .card {
         &-title {
             font-size: 50px;
@@ -68,7 +67,7 @@ footer div.footer p {
     }
 }
 
-@media (max-width: 992px) {
+@include media-breakpoint-down(lg) {
     .card {
         margin-top: 10px;
     }   
