--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -7,8 +7,8 @@
     margin-bottom: 20px;
 
     h1 {
-        color: $primary !important;
-        font-family: "Josefin Sans", sans-serif !important;
+        color: $primary;
+        font-family: "Josefin Sans", sans-serif;
         text-align: left;
     }
 }
@@ -19,29 +19,29 @@
 
 .buttons-container {
     a {
-        text-align: left !important;
+        text-align: left;
         font-size: 24px;
     }
 
     a:hover {
-        box-shadow: inset 0 0 5px #0000002a !important;
-        color: $primary !important;
+        box-shadow: inset 0 0 5px #0000002a;
+        color: $primary;
     }
 
     .active {
-        color: $primary !important;
+        color: $primary;
     }
 }
 
 .search-container {
     .input-group-text, .form-control {
-        background-color: $lighter-theme !important;
+        background-color: $lighter-theme;
         border: none;
     }
 
     .form-control {
-        transition: none !important;
-        box-shadow: none !important;
+        transition: none;
+        box-shadow: none;
     }
 }
 
@@ -52,7 +52,7 @@
     }
 
     p {
-        color: $policy !important;
+        color: $policy;
         font-size: 14px;
     }
 
@@ -61,25 +61,24 @@
     }
 }
 
-.bottom-bar {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    background-color: #fff;
+/* .navbar */
+.navbar {
     box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
     padding: 10px;
 
-    a {
+    .nav-link {
         font-size: 20px;
-        transition: 0.2s ease !important;
+        transition: 0.2s ease;
     }
 
-    a:hover {
-        color: $primary !important;
+    .navbar-nav {
+        display: flex;
+        justify-content: space-around;
+        width: 100%;
     }
 
-    .active {
-        color: $primary !important;
+    .container-fluid {
+        padding: 0px;
     }
 }
 
@@ -91,7 +90,7 @@
     }
 }
 
-@media (max-width: 767px) {
+@include media-breakpoint-down(md) {
     .logo-container {
         margin-bottom: 10px;
 
@@ -102,13 +101,7 @@
     }
 
     .search-container, .policies {
-        display: none !important;
-    }
-
-    .bottom-bar {
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
+        display: none;
     }
 
     .buttons-container {
@@ -121,7 +114,7 @@
         }
     }
 
-    .container-fluid {
+    body {
         margin-bottom: 50px;
     } 
 }
