Smaller profile picture on phone

--- a/src/scss/profile.scss
+++ b/src/scss/profile.scss
@@ -66,6 +66,14 @@
         .stats-row {
             margin-top: 40px;
         }
+
+        img {
+            width: 390px;
+        }
+
+        .col-sm-4 {
+            padding: 0px 60px;
+        }
     }
 }
 
